# PoseStudio

./: .all-contributorsrc  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINANCES.md  FINANCIAL_DISCLOSURE.md  FUNDING.yml  PoseStudio.rc  README.md  database.cpp  database.h  initialize.sql  links.md  main.cpp  notes.txt  resources.qrc
.github/: FUNDING.yml  GOOD_FIRST_ISSUES.md  SECURITY.md
docs/assets/icons/: tmp
docs/assets/images/: tmp
docs/assets/receipts/: tmp
icons/: tmp
receipts/: 4114
resources/: resources.qrc
resources/Maquettes/: About Maquettes.txt  Maquette 1F.psj
resources/database/: initialize.sql
resources/styles/: _assetmanager.qss  _menumanager.qss  _preferences.qss  global.qss  style.qss
src/: assetmanagerwidget.cpp  assetmanagerwidget.h  assetspreferencespanel.cpp  assetspreferencespanel.h  constants.h  database.cpp  database.h  factoryresetpreferencespanel.cpp  factoryresetpreferencespanel.h  generalpreferencespanel.cpp  generalpreferencespanel.h  interfacepreferencespanel.h  main.cpp  menumanager.cpp  menumanager.h  navigationpreferencespanel.cpp  navigationpreferencespanel.h  preferencesdialog.cpp  preferencesdialog.h  preferencesmanager.cpp  preferencesmanager.h  splashoverlay.h  systempreferencespanel.cpp
src/assets/: assetmanagerwidget.cpp  assetmanagerwidget.h
src/core/: database.cpp
src/preferences/: inputpreferencespanel.cpp  inputpreferencespanel.h  interfacepreferencespanel.cpp  preferencesdialog.cpp  preferencespanel.cpp  preferencespanel.h  systempreferencespanel.h
src/shell/: appproxystyle.h  menumanager.cpp  menumanager.h  splashoverlay.h
src/viewport/: viewportwidget.cpp  viewportwidget.h  vulkanwindow.cpp  vulkanwindow.h
src/viewport/rendering/: vma_impl.cpp  vulkanbuffer.cpp  vulkanbuffer.h  vulkancommands.cpp  vulkancommands.h  vulkancommon.h  vulkancontext.cpp  vulkancontext.h  vulkanimage.cpp  vulkanimage.h  vulkanpipeline.cpp  vulkanpipeline.h  vulkanrenderer.cpp  vulkanrenderer.h  vulkanswapchain.cpp  vulkanswapchain.h
src/viewport/scene/: camera.cpp  camera.h  grid.cpp  grid.h  mesh.cpp  mesh.h  objloader.cpp  objloader.h  scene.cpp  scene.h  vertex.h
src/viewport/shaders/: grid.frag  grid.vert  mesh.frag  mesh.vert
